Bug 300013 - "Delete Folder" request is ignored
Summary: "Delete Folder" request is ignored
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 4.8.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-14 15:45 UTC by Graeme Hewson
Modified: 2012-12-16 20:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graeme Hewson 2012-05-14 15:45:57 UTC
To reproduce:

Create a test folder in akonadi-local.
Click "delete folder" (either in popup menu after secondary mouse click in folder, or in main Folder menu).
In response to popup message "Are you sure you want to delete the empty folder <name>?", click on Cancel.
Click on "delete folder again". Nothing happens.

To delete the test folder at this point, it's necessary to click on another folder, then click again on the test folder. Now clicking "delete folder" again shows the popup confirm message, as expected.
Comment 1 Laurent Montel 2012-05-14 16:14:12 UTC
I confirm it.
Will fix it soon.
Comment 2 Laurent Montel 2012-05-14 18:34:57 UTC
Git commit 8aa6ea46c4fb42ff866ff124fa79d16a2ec13bd3 by Montel Laurent.
Committed on 14/05/2012 at 20:34.
Pushed by mlaurent into branch 'master'.

Fix Bug 300013 - "Delete Folder" request is ignored

FIXED-IN: 4.8.4

M  +4    -4    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/8aa6ea46c4fb42ff866ff124fa79d16a2ec13bd3
Comment 3 Laurent Montel 2012-05-14 18:36:03 UTC
Git commit 65112a3e42e038989f7898fb2c94660eb89605eb by Montel Laurent.
Committed on 14/05/2012 at 20:34.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 300013 - "Delete Folder" request is ignored

FIXED-IN: 4.8.4
(cherry picked from commit 8aa6ea46c4fb42ff866ff124fa79d16a2ec13bd3)

M  +4    -4    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/65112a3e42e038989f7898fb2c94660eb89605eb
Comment 4 Jekyll Wu 2012-12-16 20:17:34 UTC
*** Bug 311801 has been marked as a duplicate of this bug. ***