Fix Bug 300013 - "Delete Folder" request is ignored

FIXED-IN: 4.8.4
BUG: 300013